# SDL2_Template

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
